test/TestPhases/parser/valid/returnFunction.blc
module returnFunction

function foobar ()
    return;
end
