test/TestPhases/parser/invalid/nonASCII.blc
module nonASCII

function blöd()

end
